backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: owego
    http:
      paths:
      # Route /api to the Backend
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: owego-backend-service
            port:
              number: 5000
      # Route everything else to the Frontend
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: owego-frontend-service
            # Use 8080 if you kept the custom port, otherwise 80
            port:
              number: 80
